test_regress/t/t_case_default_bad.out
%Error: t/t_case_default_bad.v:16:9: Multiple default statements in case statement.
   16 |         default: $stop;
      |         ^~~~~~~
%Error: Exiting due to
